2016-11-22  SilverNexus
	* search.c: Factor out code to search for excluded directories.
	  Refactor conditional compilation of inline qualifiers to be MSVC-specific.
	* CMakeLists.txt: Add define for MSVC compilation.

2016-11-21  SilverNexus
	* search.c: Refactor io.h-based directory traversal to handle the way findfirst/next function.

2016-11-20  SilverNexus
	* CMakeLists.txt: Add condition where we add fileperuser to the system path in Windows.
	  Add compiler flags to set up compilation on MSVC compilers.
	  Add check for errno.h
	* config.h.in: Add define for errno.h presence.
	* add_to_system_path.bat: Add script to append fileperuser's path to the system path.
	* README: Update to reflect new implementation using io.h.
	* search.c: Refactor the path exclusion check to be an inline function instead of a macro substitution.
	  Move check for settings.base_search_path_length to before the traversal begins.
	  Fix invalid reference to directory->d_name in io.h directory walk.
	  Add conditional include when errno.h exists.
	  Fix improper declaration of fileinfo for directory traversal.
	* main.c: Fix invalid syntax in preprocessor directive.
	  Add the base search path check before traversal.
	  Fix compilation directives to handle Windows paths, too.

2016-11-19  SilverNexus
	* CMakeLists.txt: Add check for unistd.h in configuration. MSVC does not have it.
	  Add check for io.h, too.
	* config.h.in: Add define for presence of unistd.h.
	  Add define for presence of io.h, too.
	* search.c: Add use of unistd check to ensure unistd.h is only included when present.
	  Add implementation of search_folder to use io.h for MSVC compilers.
	* search.h: Begin to implement MSVC directory traversal functionality.
	* main.c: Add allowance of io.h presence to call search_folder().

2016-11-18  SilverNexus
	* search.c: Add code to check for existence of S_ISLNK(m). It is not always available.
	  Fix improper handling of when to display error message.